visual fix: removed <input> white border on iOS Chrome, and fixed top- and bottom-right border radius for roomID input field

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -43,7 +43,8 @@ input[type='number'],
 input[type='email'],
 input[type='password'],
 textarea {
-  font-size: 16px;
+    font-size: 16px;
+    @include vendor(appearance, none); // remove default white border on iOS
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -118,6 +119,7 @@ div.img-wrapper {
     }
 }
 
+// main background image
 .bg.image-wrapper {
     height:175vh;
 
